spelling grammar and some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -372,6 +372,14 @@ nav ul li a:hover {
             font-size: 2.1em;
             padding: 10%;
         }
+
+        #main-content-block {
+            color: var(--primary-text);
+            justify-content: center;
+            text-align: center;
+            padding: 5%;
+            font-size: 2em;
+        }
         .cta-button {
             display: inline-block;
             padding: 10px 20px;
